# SkyHigh-backend

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
app/: endpoint.py  generate.py  main.py  router.py  seed.py
app/utils/: prompts.py  vectordb.py
app/utils/lancedb_data/A1_MINIMAL_vocabulary.lance/_transactions/: 0-c8002ff6-1e5d-41f0-b6b6-cb88ad4e407a.txn
app/utils/lancedb_data/A2_MINIMAL_vocabulary.lance/_transactions/: 0-d86045cc-bd22-48b1-b4bb-32775ea88626.txn
app/utils/lancedb_data/B1_MINIMAL_vocabulary.lance/_transactions/: 0-15756ef0-fb77-4441-b77e-ecbc58e86426.txn
app/utils/lancedb_data/B2_MINIMAL_vocabulary.lance/_transactions/: 0-405036c6-a922-4879-8a70-318a188a3e4b.txn
lancedb_data/A1_vocabulary.lance/_transactions/: 0-3f127555-2223-4287-8786-359dd47edd83.txn
lancedb_data/A2_vocabulary.lance/_transactions/: 0-3c2c7198-24b4-4571-89fe-86a23466c47f.txn
lancedb_data/B1_vocabulary.lance/_transactions/: 0-53596158-3b6a-46e7-be0f-587692d21b24.txn
lancedb_data/B2_vocabulary.lance/_transactions/: 0-c5fc0e29-79d8-4456-ba6e-241f42b034d2.txn
lancedb_data/german_vocabulary.lance/_transactions/: 0-378af489-9358-4e9c-abe8-75828c4c5dc8.txn
