[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg>=1.4",
    "lancedb>=0.25.3",
    "openai>=2.7.2",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
